# devops-mlops

./: README.md
project-01-container-api/: .gitignore  Dockerfile  pyproject.toml
project-01-container-api-v2-flask/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  requirements.txt
project-01-container-api-v2-flask/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
project-01-container-api-v2-flask/docker/: docker-compose.local.yml  docker-compose.prod.yml
project-01-container-api-v2-flask/tests/: test_health.py
project-01-container-api/.github/workflows/: ci.yml
project-01-container-api/app/: __init__.py  config.py  crud.py  db.py  main.py  schemas.py
project-01-container-api/docker/: docker-compose.local.yml  docker-compose.prod.yml
project-01-container-api/tests/: test_health.py  test_items.py
project-02-lambda-api/: README.md
project-04-ml-batch-pipeline/: README.md
project-05-ml-realtime-serving/: README.md
